sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:48: error: not found: value getnombrePosition
  return (Array(index/getNombrePositions(),index%getnombrePosition()))
                                                 ^